<?xml version="1.0" encoding="UTF-8"?>
<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.moreunit</groupId>
  <artifactId>moreunit</artifactId>
  <version>3.3.2-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>MoreUnit Parent</name>
  <modules>
    <module>../org.moreunit.core</module>
    <module>../org.moreunit.plugin</module>
    <module>../org.moreunit.test.dependencies</module>
    <module>../org.moreunit.core.test</module>
    <module>../org.moreunit.light.feature</module>
    <module>../org.moreunit.test</module>
    <module>../org.moreunit.feature</module>
    <module>../org.moreunit.mock</module>
    <module>../org.moreunit.mock.test</module>
    <module>../org.moreunit.mock.it</module>
    <module>../org.moreunit.mock.feature</module>
    <module>../org.moreunit.swtbot.test</module>
    <module>../org.moreunit.updatesite</module>
  </modules>

  <properties>
    <tycho-version>3.0.3</tycho-version>
    <exec-maven-version>3.0.0</exec-maven-version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <tests.use.ui>false</tests.use.ui>

    <target.platform.classifier>eclipse-4.24</target.platform.classifier>
  </properties>

  <build>
    <extensions>
      <extension>
        <groupId>org.codehaus.mojo</groupId>
		<artifactId>exec-maven-plugin</artifactId>
        <version>${exec-maven-version}</version>
      </extension>
    </extensions>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-maven-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-source-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>target-platform-configuration</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.2</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
          	<providerHint>junit4</providerHint>
            <argLine>
              --add-opens java.base/java.lang=ALL-UNNAMED
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-p2-director-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-versions-plugin</artifactId>
          <version>${tycho-version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${exec-maven-version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-source-plugin</artifactId>
        <executions>
          <execution>
            <id>plugin-source</id>
            <goals>
              <goal>plugin-source</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-compiler-plugin</artifactId>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <configuration>
          <target>
            <artifact>
              <groupId>org.moreunit</groupId>
              <artifactId>moreunit</artifactId>
              <version>${project.version}</version>
              <classifier>${target.platform.classifier}</classifier>
            </artifact>
          </target>
          <includePackedArtifacts>true</includePackedArtifacts>
          <resolver>p2</resolver>
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-surefire-plugin</artifactId>
        <configuration>
          <useUIHarness>${tests.use.ui}</useUIHarness>
          <useUIThread>${tests.use.ui}</useUIThread>
          <showEclipseLog>true</showEclipseLog>
          <skipAfterFailureCount>10</skipAfterFailureCount>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <executions>
          <!-- Deactivates standard Maven "deploy" goal at "deploy" phase, that makes no sense for an Eclipse plug-in. -->
          <!-- Our deployment is handled via the org.moreunit.updatesite module -->
          <execution>
            <id>default-deploy</id>
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
  	<profile>
  	  <!-- makes test run in UI thread when under OSX -->
      <id>osx</id>
      <activation>
        <os>
            <family>mac</family>
        </os>
      </activation>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.eclipse.tycho</groupId>
              <artifactId>tycho-surefire-plugin</artifactId>
              <version>${tycho-version}</version>
              <configuration>
                <argLine>
                  -XstartOnFirstThread
                  --add-opens java.base/java.lang=ALL-UNNAMED
                </argLine>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
  </profiles>

  <!-- The following warning can be safely ignored: -->
  <!-- [WARNING] Dependency from [..]/org.moreunit.mock/resources to nested classpath entry YYY can not be represented in Maven model and will not be visible to non-OSGi aware Maven plugins -->
  <!-- Maven assumes all dependencies are files and these are directories. This would only be a problem for plugins such as findbugs or javadoc, but we don't need to expose these resources to them -->
  <!-- see http://dev.eclipse.org/mhonarc/lists/tycho-user/msg00896.html -->
</project>
